-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 15, 16
-
Component/s: hotspot
-
b03
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8259497 | 16.0.1 | Yasumasa Suenaga | P4 | Resolved | Fixed | b03 |
| JDK-8287361 | 15.0.8 | Yuri Nesterenko | P4 | Resolved | Fixed | b03 |
| JDK-8287364 | 13.0.12 | Yuri Nesterenko | P4 | Resolved | Fixed | b03 |
| JDK-8280133 | 11.0.15-oracle | Kevin Walls | P4 | Resolved | Fixed | b03 |
| JDK-8258739 | 11.0.11 | Yasumasa Suenaga | P4 | Resolved | Fixed | b01 |
```
hsdb> search codecache 0x7fedbd0aec90
java.lang.RuntimeException: Unable to deduce type of CodeBlob from address 0x00007fedbc85e810 (expected type nmethod, RuntimeStub, SafepointBlob, DeoptimizationBlob, or ExceptionBlob)
at jdk.hotspot.agent/sun.jvm.hotspot.code.CodeCache.createCodeBlobWrapper(CodeCache.java:177)
at jdk.hotspot.agent/sun.jvm.hotspot.memory.CodeHeap.iterate(CodeHeap.java:111)
at jdk.hotspot.agent/sun.jvm.hotspot.code.CodeCache.iterate(CodeCache.java:185)
at jdk.hotspot.agent/sun.jvm.hotspot.CommandProcessor$40.doit(CommandProcessor.java:1535)
at jdk.hotspot.agent/sun.jvm.hotspot.CommandProcessor.executeCommand(CommandProcessor.java:2051)
at jdk.hotspot.agent/sun.jvm.hotspot.CommandProcessor.executeCommand(CommandProcessor.java:2021)
at jdk.hotspot.agent/sun.jvm.hotspot.CommandProcessor.run(CommandProcessor.java:1901)
at jdk.hotspot.agent/sun.jvm.hotspot.CLHSDB.run(CLHSDB.java:99)
at jdk.hotspot.agent/sun.jvm.hotspot.CLHSDB.main(CLHSDB.java:40)
at jdk.hotspot.agent/sun.jvm.hotspot.SALauncher.runCLHSDB(SALauncher.java:280)
at jdk.hotspot.agent/sun.jvm.hotspot.SALauncher.main(SALauncher.java:483)
```
I checked the Object which points 0x7fedbd0aec90, it was `VtableBlob`. It has been introduced in
SA should support `VtableBlob`.
- backported by
-
JDK-8258739 "search codecache" clhsdb command does not work
-
- Resolved
-
-
JDK-8259497 "search codecache" clhsdb command does not work
-
- Resolved
-
-
JDK-8280133 "search codecache" clhsdb command does not work
-
- Resolved
-
-
JDK-8287361 "search codecache" clhsdb command does not work
-
- Resolved
-
-
JDK-8287364 "search codecache" clhsdb command does not work
-
- Resolved
-
- links to
-
Commit
openjdk/jdk13u-dev/73ac61ff
-
Commit
openjdk/jdk15u-dev/b62d97d4
-
Commit
openjdk/jdk16u/bf90c475
-
Commit
openjdk/jdk/1e03ca13
-
Review
openjdk/jdk13u-dev/351
-
Review
openjdk/jdk15u-dev/212
-
Review
openjdk/jdk16u/3
-
Review
openjdk/jdk/1800