8258471: "search codecache" clhsdb command does not work